--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,10 @@
         <% messages.forEach((msg,idx) => { %>
         <li>
           <strong><%= msg.user %></strong>: <%= msg.text %>
-          <em>(<%= msg.added.toLocaleString() %>)</em>
+          <em
+            ><%= msg.added.toLocaleDateString('en-US', { year: 'numeric', month:
+            'short', day: 'numeric'}) %></em
+          >
           <a class="open" href="/message/<%= idx %>">Open message</a>
         </li>
         <% }) %>
