--- a/views/new.ejs
+++ b/views/new.ejs
@@ -12,11 +12,10 @@
 
     <form method="POST" action="/new">
       <label for="name">Name</label>
-      <input id="name" type="text" name="name" placeholder="Name" required />
+      <input id="name" type="text" name="username" placeholder="Name" required />
       <label for="message">Message</label>
       <textarea
         id="message"
-        type="text"
         placeholder="Message..."
         name="message"
         required
