--- a/views/message.ejs
+++ b/views/message.ejs
@@ -11,7 +11,7 @@
     <a class="back" onclick="history.back()">Go back</a>
     <div style="background-color: <%= colour %>">
       <img src="/push_pin.svg" class="pin" />
-      <h2>From: <%=msg.user%></h2>
+      <h2>From: <%=msg.username%></h2>
       <p><%= msg.text %></p>
       <em
         ><%= msg.added.toLocaleDateString('en-US', { year: 'numeric', month:
